app/assets/stylesheets/partials/_search.scss
// ------------------------
// #SEARCH BITS
// ------------------------

/* Shared link styling */
@mixin searchUnderlinedLinks {
  color: $color-text-oncolor;
  font-weight: $fw-medium;
  text-decoration: underline;
  text-decoration-color: $color-red-500;
  text-underline-offset: 0.5rem;  

  &:hover {
    color: $color-red-400;
  }
}

/* New USE UI search styles */
#search-form {
  margin: 0;
  padding-bottom: 24px;

  label {
    font-size: 1.8rem;
    margin-bottom: 12px;
    font-weight: $fw-medium;
    display: block;
    line-height: 1;
    color: $color-text-oncolor;
  }

  .form-wrapper {
    display: flex;
    gap: 8px;

    input, button {
      padding: 12px 20px;
      border-radius: 0;
      font-size: 1.8rem;
      font-weight: $fw-medium;

      margin: 0;

      &:hover:not(:focus) {
        outline: 2px solid $color-gray-700;
        outline-offset: 2px;
      }
    }

    .search-input-wrapper {
      flex-grow: 1;
      position: relative;

      i {
        position: absolute;
        top: 13px;
        left: 12px;
        font-size: 20px;
        color: $color-icon-primary;
        pointer-events: none;
      }

      input {
        color: $color-black;
        border: none;
        width: 100%;
        padding-left: 46px;
      }

      #clear-search {
        display: none;
        position: absolute;
        top: 8px;
        right: 8px;
        height: 32px;
        width: 32px;        
        background: none;
        color: $color-icon-primary;
        font-size: 0;
        padding: 2px;
        border-radius: 100%;
        border: 1px solid $color-border-default;
        cursor: pointer;

        &:hover {
          background-color: $color-blue-25;
          color: $color-blue-500;
          border-color: $color-blue-500;
          outline: none;
        }

        &::before {
          content: '\f00d';
          font-family: FontAwesome;
          font-size: 16px;
        }
      }
    } 
    
    button {
      background-color: $color-red-600;
      border: none;
    }

  }

  .form-links {
    padding-top: 12px;

    a {
      color: $color-white;
      text-decoration: none;
      border-bottom: 1px solid $color-red-500;
      font-size: 1.4rem;
    }

  }

}

/* basic search bar */
.search-form {
  background-color: #989898;
  margin-bottom: 0rem;
  padding: 2.4rem 2rem 1.6rem 2rem;

  details {
    &:first-of-type {
      margin-top: 1rem;
    }

    .field-container {
      margin-top: 1rem;
    }
  }

  .field-label {
    color: $black;
    display: block;
    margin-bottom: .25rem;
    font-size: $fs-small;
    font-weight: $fw-normal;
  }

  .basic-search-input,
  summary {
    -webkit-appearance: none;
    border: none;
    border-radius: 0;
    box-shadow: none;
    width: 100%;
    margin-bottom: .8rem;
    padding: 6px 12px;
    margin-bottom: 0;
  }

  summary {
    pointer: arrow;

    #advanced-search-label,
    #geobox-search-label,
    #geodistance-search-label {
      &::before {
        font-family: FontAwesome;
        margin-right: 1rem;
      }
    }

    &::-webkit-details-marker {
      display: none;
    }
  }

  #advanced-search-panel,
  #geobox-search-panel,
  #geodistance-search-panel {
    fieldset {
      legend {
        color: $black;
      }
    }
    #advanced-search-label,
    #geobox-search-label,
    #geodistance-search-label {
      &::before {
        content: '\f054';
      }
    }
    &[open] {
      #advanced-search-label,
      #geobox-search-label,
      #geodistance-search-label {
        &::before {
          content: '\f078';
        }
      }
    }
  }

  #geobox-search-panel,
  #geodistance-search-panel {
    .geo-label,
    .geo-desc,
    .hint,
    p {
      display: block;
      color: $black;
      font-size: $fs-small;
    }
    .geo-label {
      font-weight: $fw-bold;
      &:after {
        content: ' *';
      }
    }
    .geo-desc {
      margin-bottom: 2rem;
    }
    #maxLat-desc,
    #maxLong-desc,
    #distance-desc {
        margin-bottom: 0rem;
    }
    @media (max-width: $bp-screen-md) {
      #maxLat-desc,
      #maxLong-desc,
      #distance-desc {
        margin-bottom: 2rem;
      }
    }
  }

  .geo-search-submit {
    width: 150px;
    margin-top: 0.8rem;
    .btn {
      width: 100%;
    }
  }
}

/* about section */
.about {
  border: 0;
  font-size: 1.6rem;
  line-height: $lh-xloose;
  margin: 0;
  max-width: 760px;
  padding: 3.5rem 0 2rem;

  a {
    @include underlinedLinks;
    font-weight: $fw-medium;
  }
}

.tab-link {
  color: #fff;
}

/* ============== */
/* Search Actions */
/* ============== */

.search-actions {
  padding-top: 16px;
  padding-bottom: 8px;
  display: flex;
  gap: 24px;

  a {
    @include searchUnderlinedLinks();
  }
}

